# ABLS-AGENT-PHIDGET

./: .gitignore  AUTHORS  CMakeLists.txt  Containerfile  README.md  build.sh  build_apt.sh  build_rpm.sh  bump.sh  install.sh  install_deps.sh
include/: phidget.h
packaging/deb/: postrm  prerm
packaging/rpm/: runtime.postinst  runtime.postun  runtime.preun
packaging/systemd/: abls-agent-phidget@.service
src/: phidget.c
